--- a/da/browser/chrome/browser/browser.properties
+++ b/da/browser/chrome/browser/browser.properties
@@ -444,6 +444,12 @@ webapps.install.accesskey = I
 webapps.requestInstall = Vil du installere "%1$S" fra webstedet %2$S?
 webapps.install.success = Webapplikation er installeret
 webapps.install.inprogress = Installationen er i gang
+webapps.uninstall = Afinstaller
+webapps.uninstall.accesskey = A
+webapps.doNotUninstall = Afinstaller ikke
+webapps.doNotUninstall.accesskey = f
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Vil du afinstallere "%1$S"?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S bruger nu fuldskærmsvisning.
@@ -495,11 +501,10 @@ identity.loggedIn.description = Logget ind som: %S
 identity.loggedIn.signOut.label = Log ud
 identity.loggedIn.signOut.accessKey = L
 
-# LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message, getUserMedia.shareCameraAndMicrophone.message, getUserMedia.sharingCamera.message, getUserMedia.sharingMicrophone.message, getUserMedia.sharingCameraAndMicrophone.message): %S is the website origin (e.g. www.mozilla.org)
-# LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
-# Semi-colon list of plural forms. See:
-# http://developer.mozilla.org/en/docs/Localization_and_Plurals
-# The number of devices can be either one or two.
+# LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message,
+#                    getUserMedia.shareScreen.message, getUserMedia.shareCameraAndMicrophone.message,
+#                    getUserMedia.shareScreenAndMicrophone.message):
+#  %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.shareCamera.message = Vil du dele dit kamera med %S?
 getUserMedia.shareMicrophone.message = Vil du dele din mikrofon med %S?
 getUserMedia.shareScreen.message = Vil du dele din skærm med %S?
@@ -530,13 +535,34 @@ getUserMedia.continueSharing.accesskey = F
 getUserMedia.stopSharing.label = Stop med at dele
 getUserMedia.stopSharing.accesskey = S
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S har blokeret usikkert indhold på denne side.
-mixedContentBlocked.keepBlockingButton.label = Fortsæt med at blokere
-mixedContentBlocked.keepBlockingButton.accesskey = F
-mixedContentBlocked.unblock.label = Deaktiver blokering på denne side
-mixedContentBlocked.unblock.accesskey = D
+getUserMedia.sharingMenu.label = Tabs sharing devices
+getUserMedia.sharingMenu.accesskey = d
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (kamera)
+getUserMedia.sharingMenuMicrophone = %S (mikrofon)
+
+getUserMedia.sharingMenuScreen = %S (skærm)
+getUserMedia.sharingMenuWindow = %S (vindue)
+getUserMedia.sharingMenuCameraMicrophone = %S (kamera og mikrofon)
+
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon og skærm)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon og vindue)
+
+getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon og skærm)
+getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon og vindue)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Ukendt oprindelse
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S er tilsyneladende langsom til at starte.
