--- a/uk/browser/chrome/browser/newTab.properties
+++ b/uk/browser/chrome/browser/newTab.properties
@@ -8,23 +8,23 @@ newtab.block=Вилучити цей сайт
 # LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
 # and enhanced tiles on the same line as the tile's title, so prefer short
 # strings to avoid overlap. This string should be uppercase.
-newtab.sponsored.button=SPONSORED
+newtab.sponsored.button=ВІД СПОНСОРА
 # LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
-newtab.sponsored.explain=This tile is being shown to you on behalf of a Mozilla partner. You can remove it at any time by clicking the %1$S button. %2$S
+newtab.sponsored.explain=Цю плитку вам показано від імені партнера Mozilla. Ви можете прибрати її будь-коли, клацнувши на кнопку %1$S. %2$S
 # LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
-newtab.enhanced.explain=A Mozilla partner has visually enhanced this tile, replacing the screenshot. You can turn off enhanced tiles by clicking the %1$S button for your preferences. %2$S
+newtab.enhanced.explain=Партнер Mozilla візуально покращив цю плитку, замінивши знімок екрану. Ви можете вимкнути покращені плитки, клацнувши на кнопку %1$S.  %2$S
 # LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
 # active link using string newtab.learn.link as text.
-newtab.intro.paragraph1=When you open a new tab, you’ll see tiles from the sites you frequently visit, along with tiles that we think might be of interest to you. Some of these tiles may be sponsored by Mozilla partners. We’ll always indicate to you which tiles are sponsored. %1$S
+newtab.intro.paragraph1=При відкритті нової вкладки, ви бачите плитки сайтів, які часто відвідуєте разом з плитками, які на нашу думку можуть вас зацікавити. Деякі з цих плиток можуть бути спонсоровані партнерами Mozilla. Ми завжди позначаємо для вас спонсоровані плитки. %1$S
 # LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
 # active link using string newtab.privacy.link as text.
-newtab.intro.paragraph2=In order to provide this service, Mozilla collects and uses certain analytics information relating to your use of the tiles in accordance with our %1$S.
+newtab.intro.paragraph2=Для забезпечення надання цієї послуги, Mozilla збирає та використовує певну аналітичну інформацію про використання вами плиток, у відповідності з нашою %1$S.
 # LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window.
-newtab.intro.paragraph3=You can turn off the tiles feature by clicking the %1$S button for your preferences.
-newtab.learn.link=Learn more…
-newtab.privacy.link=Privacy Notice
+newtab.intro.paragraph3=Ви можете вимкнути цю функцію плиток, клацнувши на кнопку %1$S.
+newtab.learn.link=Дізнатись більше…
+newtab.privacy.link=Повідомлення про приватність
