--- a/uk/browser/chrome/browser/shellservice.properties
+++ b/uk/browser/chrome/browser/shellservice.properties
@@ -2,20 +2,20 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-optionsLabel=%S &Настройки
+optionsLabel=%S &Налаштування
 safeModeLabel=%S &Безпечний режим
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
-setDefaultBrowserMessage2          = Get the most out of %S by setting it as your default browser
-setDefaultBrowserConfirm.label     = Use %S as my default browser
-setDefaultBrowserConfirm.accesskey = U
-setDefaultBrowserOptions.label     = Options
-setDefaultBrowserOptions.accesskey = O
-setDefaultBrowserNotNow.label      = Not now
-setDefaultBrowserNotNow.accesskey  = N
-setDefaultBrowserNever.label       = Don't ask me again
-setDefaultBrowserNever.accesskey   = D
+setDefaultBrowserMessage2          = Отримати максимальну віддачу від %S, зробивши його своїм типовим браузером
+setDefaultBrowserConfirm.label     = Використовувати %S, як мій типовий браузер
+setDefaultBrowserConfirm.accesskey = В
+setDefaultBrowserOptions.label     = Налаштування
+setDefaultBrowserOptions.accesskey = Н
+setDefaultBrowserNotNow.label      = Не зараз
+setDefaultBrowserNotNow.accesskey  = е
+setDefaultBrowserNever.label       = Не питати знову
+setDefaultBrowserNever.accesskey   = з
 
 
 desktopBackgroundLeafNameWin=Desktop Background.bmp
