--- a/uk/browser/chrome/browser/newTab.properties
+++ b/uk/browser/chrome/browser/newTab.properties
@@ -22,7 +22,7 @@ newtab.enhanced.explain=Партнер Mozilla візуально покращи
 newtab.intro.paragraph1=При відкритті нової вкладки, ви бачите плитки сайтів, які часто відвідуєте разом з плитками, які на нашу думку можуть вас зацікавити. Деякі з цих плиток можуть бути спонсоровані партнерами Mozilla. Ми завжди позначаємо для вас спонсоровані плитки. %1$S
 # LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
 # active link using string newtab.privacy.link as text.
-newtab.intro.paragraph2=Для забезпечення надання цієї послуги, Mozilla збирає та використовує певну аналітичну інформацію про використання вами плиток, у відповідності з нашою %1$S.
+newtab.intro.paragraph2=Для забезпечення надання цієї послуги, Mozilla збирає та використовує певну аналітичну інформацію про використання вами плиток, у відповідності з нашим %1$S.
 # LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window.
 newtab.intro.paragraph3=Ви можете вимкнути цю функцію плиток, клацнувши на кнопку %1$S.
