--- a/da/browser/chrome/browser/loop/loop.properties
+++ b/da/browser/chrome/browser/loop/loop.properties
@@ -37,7 +37,7 @@ display_name_available_status=Tilgængelig
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 unable_retrieve_url=Vi kunne desværre ikke hente en opkalds-URL
-session_expired_error_description=Session expired. Alle URL'er du tidligere har oprettet og delt vil ikke længere virke.
+session_expired_error_description=Sessionen udløb. Alle URL'er du tidligere har oprettet og delt vil ikke længere virke.
 could_not_authenticate=Kunne ikke godkendes
 password_changed_question=Har du ændret din adgangskode?
 try_again_later=Prøv igen senere
@@ -109,13 +109,13 @@ sync_contacts_button=Synkroniser kontakter
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description_simple=Beklager, importen af kontakter mislykkedes
+import_failed_description_simple=Beklager, import af kontakter mislykkedes
 ## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
 ## fails and the user may need more help. In this item, don't translate the part between
 ## {{..}} because this will be replaced by the label from import_failed_support_link_label.
 ## This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Beklager, importen af kontakter mislykkedes. Læs vores {{import_failed_support_link_label}} for hjælp
+import_failed_description=Beklager, import af kontakter mislykkedes. Læs vores {{import_failed_support_link_label}} for hjælp
 import_failed_support_link_label=supportwebsted
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
@@ -264,7 +264,7 @@ feedback_back_button=Tilbage
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-feedback_window_will_close_in2=Dette vindue lukker om {{countdown}} sekund;Dette vindue lukker om  {{countdown}} sekunder
+feedback_window_will_close_in2=Dette vindue lukker om {{countdown}} sekund;Dette vindue lukker om {{countdown}} sekunder
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
