fixes bug 1070833 - regression in region.properties

--- a/ca/mobile/chrome/region.properties
+++ b/ca/mobile/chrome/region.properties
@@ -2,60 +2,37 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+# LOCALIZATION NOTE: REVIEW_REQUIRED
+# Please do not commit any changes to this file without a review from
+# the l10n-drivers team (this includes en-US). In order to get one,
+# please file a bug, add the "productization" keyword and CC l10n@mozilla.com.
+
 # Default search engine
 browser.search.defaultenginename=Google
 
-# Search engine order (order displayed in the search bar dropdown)s
+# Search engine order (order displayed in the search bar dropdown)
 browser.search.order.1=Google
-browser.search.order.2=Yahoo
-browser.search.order.3=Bing
+
+# This is the default set of web based feed handlers shown in the reader
+# selection UI
+browser.contentHandlers.types.0.title=Netvibes
+browser.contentHandlers.types.0.uri=http://www.netvibes.com/subscribe.php?url=%s
+browser.contentHandlers.types.1.title=Bloglines
+browser.contentHandlers.types.1.uri=http://www.bloglines.com/login?r=/sub/%s
 
 # increment this number when anything gets changed in the list below.  This will
 # cause Firefox to re-read these prefs and inject any new handlers into the
 # profile database.  Note that "new" is defined as "has a different URL"; this
 # means that it's not possible to update the name of existing handler, so
 # don't make any spelling errors here.
-gecko.handlerService.defaultHandlersVersion=3
+gecko.handlerService.defaultHandlersVersion=4
 
 # The default set of protocol handlers for webcal:
 gecko.handlerService.schemes.webcal.0.name=30 Boxes
-gecko.handlerService.schemes.webcal.0.uriTemplate=http://30boxes.com/external/widget?refer=ff&url=%s
+gecko.handlerService.schemes.webcal.0.uriTemplate=https://30boxes.com/external/widget?refer=ff&url=%s
 
 # The default set of protocol handlers for mailto:
 gecko.handlerService.schemes.mailto.0.name=Yahoo! Mail
-gecko.handlerService.schemes.mailto.0.uriTemplate=http://compose.mail.yahoo.com/?To=%s\u0020
+gecko.handlerService.schemes.mailto.0.uriTemplate=https://compose.mail.yahoo.com/?To=%s 
 gecko.handlerService.schemes.mailto.1.name=Gmail
 gecko.handlerService.schemes.mailto.1.uriTemplate=https://mail.google.com/mail/?extsrc=mailto&url=%s
-
-# This is the default set of web based feed handlers shown in the reader
-# selection UI
-browser.contentHandlers.types.0.title=My Yahoo!
-browser.contentHandlers.types.0.uri=https://add.my.yahoo.com/rss?url=%s
-
-# Order of suggested websites displayed in the Top Sites panel.
-# Values for these keys must correspond to the name used in the keys that
-# define each suggested website's details. For example:
-# browser.suggestedsites.list.0=NAME
-# browser.suggestedsites.NAME.title=Displayed name
-# browser.suggestedsites.NAME.url=Website URL
-# browser.suggestedsites.NAME.bgcolor= Color (hex format)
-browser.suggestedsites.list.0=mozilla
-browser.suggestedsites.list.1=fxmarketplace
-browser.suggestedsites.list.2=fxaddons
-browser.suggestedsites.list.3=fxsupport
-
-browser.suggestedsites.mozilla.title=El Projecte Mozilla
-browser.suggestedsites.mozilla.url=https://www.mozilla.org/ca/
-browser.suggestedsites.mozilla.bgcolor=#ce4e41
-
-browser.suggestedsites.fxmarketplace.title=Firefox Marketplace
-browser.suggestedsites.fxmarketplace.url=https://marketplace.firefox.com/
-browser.suggestedsites.fxmarketplace.bgcolor=#0096dd
-
-browser.suggestedsites.fxaddons.title=Complements: Personalitzeu el Firefox
-browser.suggestedsites.fxaddons.url=https://addons.mozilla.org/ca/android/
-browser.suggestedsites.fxaddons.bgcolor=#62be06
-
-browser.suggestedsites.fxsupport.title=Ajuda i assistència del Firefox
-browser.suggestedsites.fxsupport.url=https://support.mozilla.org/ca/products/mobile
-browser.suggestedsites.fxsupport.bgcolor=#f37c00
