--- a/ca/suite/chrome/browser/region.properties
+++ b/ca/suite/chrome/browser/region.properties
@@ -8,6 +8,7 @@
 #
 browser.startup.homepage=http://www.softcatala.org/wiki/SeaMonkey
 browser.throbber.url=http://www.softcatala.org/wiki/SeaMonkey
+browser.search.defaulturl=http://www.google.com/search?hl=ca&q=
 
 browser.translation.service=http://translate.google.com/translate?prev=/language_tools&u=
 browser.translation.serviceDomain=translate.google.com
