--- a/nl/browser/chrome/browser/devtools/webconsole.properties
+++ b/nl/browser/chrome/browser/devtools/webconsole.properties
@@ -230,7 +230,7 @@ cdFunctionInvalidArgument=Kan geen cd() naar het opgegeven venster uitvoeren. On
 # LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
 # a new user of the developer tools pastes code into the console
 # %1 is the text of selfxss.okstring
-selfxss.msg=Scamwaarschuwing: wees voorzichtig bij het plakken van dingen die u niet begrijpt. Hierdoor kunnen aanvallers uw identiteit stelen of de besturing van uw computer overnemen. Typ hieronder ‘%S’ (op Enter drukken is niet nodig) om plakken toe te staan.
+selfxss.msg=Scamwaarschuwing: wees voorzichtig met het plakken van dingen die u niet begrijpt. Hierdoor kunnen aanvallers uw identiteit stelen of de besturing van uw computer overnemen. Typ hieronder ‘%S’ (op Enter drukken is niet nodig) om plakken toe te staan.
 
 # LOCALIZATION NOTE (selfxss.msg): the string to be typed
 # in by a new user of the developer tools when they receive the sefxss.msg prompt.
@@ -241,3 +241,19 @@ selfxss.okstring=plakken toestaan
 # you hover the arrow for expanding/collapsing the message details. For
 # console.error() and other messages we show the stacktrace.
 messageToggleDetails=Berichtdetails tonen/verbergen
+
+# LOCALIZATION NOTE (emptySlotLabel): the text is displayed when an Array
+# with empty slots is printed to the console.
+# This is a semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of empty slots
+# example: 1 empty slot
+# example: 5 empty slots
+emptySlotLabel=#1 leeg slot;#1 lege sloten
+
+# LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
+# the column header displayed in the console table widget.
+table.index=(index)
+table.iterationIndex=(iteratie-index)
+table.key=Sleutel
+table.value=Waarden
