--- a/nl/browser/chrome/browser/devtools/scratchpad.properties
+++ b/nl/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,13 @@ scratchpad.panelLabel=Kladblok-paneel
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=Kladblok
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Scamwaarschuwing: wees voorzichtig met het plakken van dingen die u niet begrijpt. Hierdoor kunnen aanvallers uw identiteit stelen of de besturing van uw computer overnemen. Typ ‘%S’ in het onderstaande kladblok om plakken toe te staan.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=plakken toestaan
