--- a/nl/browser/chrome/browser/devtools/styleeditor.properties
+++ b/nl/browser/chrome/browser/devtools/styleeditor.properties
@@ -40,7 +40,7 @@ error-save=Stijlblad kon niet worden opgeslagen.
 
 # LOCALIZATION NOTE  (error-compressed): This is shown when we can't show
 # coverage information because the css source is compressed.
-error-compressed=Kan geen bereikgegevens tonen voor gecomprimeerde stijlbladen
+error-compressed=Kan geen dekkingsgegevens tonen voor gecomprimeerde stijlbladen
 
 # LOCALIZATION NOTE  (importStyleSheet.title): This is the file picker title,
 # when you import a style sheet into the Style Editor.
