[qa][mobile] Consistency

--- a/fr/mobile/android/chrome/webapp.properties
+++ b/fr/mobile/android/chrome/webapp.properties
@@ -18,7 +18,7 @@ retrieveUpdateTitle=#1 nouvelle mise à jour disponible;#1 nouvelles mises à jo
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # %1$S is a comma-separated list of apps for which to retrieve an update.
 # example: Touch to retrieve updates for Foo, Bar, Baz
-retrieveUpdateMessage=Appuyer pour récupérer la mise à jour pour %1$S;Appuyer pour récupérer les mises à jour pour %1$S
+retrieveUpdateMessage=Appuyez pour récupérer la mise à jour pour %1$S;Appuyez pour récupérer les mises à jour pour %1$S
 
 # LOCALIZATION NOTE (retrievingUpdateTitle): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -42,7 +42,7 @@ installUpdateTitle=#1 mise à jour téléchargée;#1 mises à jour téléchargé
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # %1$S is a comma-separated list of apps for which to install an update.
 # example: Touch to install updates for Foo, Bar, Baz
-installUpdateMessage2=Appuyer pour installer la mise à jour pour %1$S;Appuyer pour installer les mises à jour pour %1$S
+installUpdateMessage2=Appuyez pour installer la mise à jour pour %1$S;Appuyez pour installer les mises à jour pour %1$S
 
 # LOCALIZATION NOTE (retrievalFailedTitle): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
