adjust module names to fit both the byte limits and the CertPassPrompt string

--- a/de/security/manager/chrome/pipnss/pipnss.properties
+++ b/de/security/manager/chrome/pipnss/pipnss.properties
@@ -23,7 +23,7 @@ LibraryDescription=PSM-interne Krypto-Dienste
 TokenDescription=Allgemeine Krypto-Dienste
 #
 # 32 bytes long after conversion to UTF8
-PrivateTokenDescription=Software-Sicherheitsmodul
+PrivateTokenDescription=das Software-Sicherheitsmodul
 #
 # 64 bytes long after conversion to UTF8
 SlotDescription=PSM-interne Kryptographie-Dienste
@@ -32,11 +32,11 @@ SlotDescription=PSM-interne Kryptographie-Dienste
 PrivateSlotDescription=PSM private Schlüssel
 #
 # 32
-Fips140TokenDescription=Software-Sicherheitsmodul(FIPS)
+Fips140TokenDescription=das Softw.-Sicherh.modul (FIPS)
 # 64
-Fips140SlotDescription=FIPS 140 Krypto-, Schlüssel- und Zertifikat-Services
+Fips140SlotDescription=FIPS 140 Krypto-, Schlüssel- und Zertifikat-Dienste
 # 32
-InternalToken=Software-Sicherheitsmodul
+InternalToken=das Software-Sicherheitsmodul
 # End of size restriction.
 VerifySSLClient=SSL-Client-Zertifikat
 VerifySSLServer=SSL-Server-Zertifikat
