sync DOM and security with the Mozilla 34 uplift point

--- a/de/dom/chrome/dom/dom.properties
+++ b/de/dom/chrome/dom/dom.properties
@@ -208,3 +208,4 @@ KeyNameZoomWarning=KeyboardEvent.key-Wert "Zoom" sollte nicht mehr verwendet wer
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=KeyboardEvent.key-Werte, die mit "Dead" beginnen, sollte nicht mehr verwendet werden und werden in "Dead" alleine eingegliedert. Für weitere Hilfe siehe https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Importieren von XUL-Knoten in ein Inhaltsdokument sollte nicht mehr verwendet werden. Diese Funktionalität könnte bald entfernt werden.
+XMLDocumentLoadPrincipalMismatch=Die Verwendung von document.load ist auf Dokumenten verboten, die von anderen Fenstern kommen. Nur das Fenster, das ein Dokument erstellt hat, darf .load auf diesem Dokument aufrufen. Vorzugsweise sollten sie XMLHttpRequest stattdessen verwenden.
