sync DOM L10n with current trunk

--- a/de/dom/chrome/accessibility/AccessFu.properties
+++ b/de/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    gedrückt
 stateExpanded    =    ausgeklappt
 stateCollapsed   =    zugeklappt
 stateUnavailable =    nicht verfügbar
+stateReadonly    =    readonly
 stateRequired    =    benötigt
 stateTraversed   =    besucht
 stateHasPopup    =    hat Popup
