--- a/de/dom/chrome/security/security.properties
+++ b/de/dom/chrome/security/security.properties
@@ -13,3 +13,5 @@ InsecureFormActionPasswordsPresent=Passwort-Felder sind in einem Formular mit ei
 InsecurePasswordsPresentOnIframe=Passwort-Felder sind in einem unsicheren (http://) Iframe vorhanden. Dies ist ein Sicherheitsrisiko, durch das Zugangsdaten gestohlen werden können.
 LoadingMixedActiveContent=Lade gemischte (unsichere) aktive Inhalte auf einer sicheren Seite "%1$S"
 LoadingMixedDisplayContent=Lade gemischte (unsichere) Anzeige-Inhalte auf einer sicheren Seite "%1$S"
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=An iframe which has both allow-scripts and allow-same-origin for its sandbox attribute can remove its sandboxing.
