updated latvian translation

--- a/lv/dom/chrome/dom/dom.properties
+++ b/lv/dom/chrome/dom/dom.properties
@@ -189,3 +189,4 @@ KeyNameFastFwdWarning=KeyboardEvent.key vērtība "FastFwd" ir novecojusi un tik
 KeyNameZoomWarning=KeyboardEvent.key vērtība "Zoom" ir novecojusi un tiks pārsaukta par "ZoomToggle". Papildus informācija pieejama https://developer.mozilla.org/en-/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=KeyboardEvent.key vērtības, kas sākas ar "Dead" ir novecojušas un tiks pārsauktas par vienkārši "Dead". Papildus informācija pieejama https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+XMLDocumentLoadPrincipalMismatch=document.load izmantošana ir aizliegta dokumentiem no cita loga. Tikai logs, kurā dokuments tika radīts var izsaukt .load šim dokumentam. Ieteicams izmantot XMLHttpRequest.
