--- a/lv/dom/chrome/security/csp.properties
+++ b/lv/dom/chrome/security/csp.properties
@@ -28,7 +28,7 @@ failedToParseUnrecognizedSource = Neizdevās apstrādāt neatpazītu avotu %1$S
 reportPostRedirect = Pārkāpuma ziņojuma nosūtīšana %1$S neizdevās, jo notikusi pāradresācija
 
 reportURInotInReportOnlyHeader = Lapai (%1$S) ir tikai lasāma politika bez ziņošanas adreses. CSP nebloķēs un nevarēs paziņot par šīs politikas pārkāpumiem.
-
+notSupportingDirective = Nav atbalstošo direktīvu '%1$S'. Direktīva un vērtības tiks ignorētas.
 # CSP Errors:
 policyURINotAlone = policy-uri direktīva drīkst parādīties tikai vienu reizi
 noParentRequest = policy-uri nevar iegūt bez vecāka pieprasījuma un CSP.
