--- a/it/browser/chrome/browser/browser.properties
+++ b/it/browser/chrome/browser/browser.properties
@@ -304,6 +304,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (fotocamera e microfono)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (fotocamera, microfono e applicazione)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (fotocamera, microfono e schermo)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (fotocamera, microfono e finestra)
+getUserMedia.sharingMenuCameraApplication = %S (fotocamera e applicazione)
+getUserMedia.sharingMenuCameraScreen = %S (fotocamera e schermo)
+getUserMedia.sharingMenuCameraWindow = %S (fotocamera e finestra)
 getUserMedia.sharingMenuMicrophoneApplication = %S (microfono e applicazione)
 getUserMedia.sharingMenuMicrophoneScreen = %S (microfono e schermo)
 getUserMedia.sharingMenuMicrophoneWindow = %S (microfono e finestra)
