[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/loop/loop.properties
+++ b/xh/browser/chrome/browser/loop/loop.properties
@@ -142,12 +142,16 @@ unblock_contact_menu_button=Khulula uqhagamshelo
 ## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_menu_button=Hlela iziqhagamshelo
 ## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
 ## panel. It is displayed when Edit Contact is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_title=Hlela iziqhagamshelo
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These fields are display when the Edit Contact button is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_name_label=Igama
+edit_contact_email_label=I-imeyili
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
@@ -223,7 +227,9 @@ call_timeout_notification_text=I-kholi yakho khange iphumele.
 ## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Phinda uzame
 email_link_button=Ikhonkco le-imeyili
+cancel_button=Rhoxisa
 
 cannot_start_call_session_not_ready=Awunakuqaliswa umnxeba, iseshoni ayikalungi.
 network_disconnected=Unxibelelwano kwinethiwekhi luphele ngesiquphe.
@@ -245,6 +251,7 @@ feedback_category_audio_quality=Umgangatho wesandi
 feedback_category_video_quality=umgangatho we-vido
 feedback_category_was_disconnected=uqhawulwe
 feedback_category_confusing=Iyabhida
+feedback_category_other=Okunye:
 feedback_custom_category_text_placeholder=Yintoni engahambanga kakuhle
 feedback_submit_button=Ngenisa
 feedback_back_button=Emva
