--- a/xh/dom/chrome/accessibility/AccessFu.properties
+++ b/xh/dom/chrome/accessibility/AccessFu.properties
@@ -47,9 +47,16 @@ whitespace     =       indawo emhlophe
 pagetablist    =       uluhlu lwethebhu
 canvas         =       ikhanvasi
 checkmenuitem  =       khangela i-ayithem yemenyu
+label          =       ileyibhile
 passwordtext   =       umbhalo wepasiwedi
+radiomenuitem  =       iayithem yemenyu kanomathotholo
+textcontainer  =       ikhonteyina yombhalo
+togglebutton   =       iqhosha elilayita licime kwikhibhodi
+treetable      =       itheyibhile yomthi
 header         =       isihloko
 footer         =       okubhalwa emazantsi ephepha
+paragraph      =       umhlathi
+entry          =       ufakelo
 caption        =       ikhepshini
 heading        =       Isihloko
 section        =       icandelo
@@ -60,7 +67,10 @@ imagemap       =       imephu yomfanekiso
 listboxoption  =       ukhetho
 listbox        =       ibhokisi yoluhlu
 flatequation   =       ulingano olusicaba
+gridcell       =       iseli yegridi
+note           =       Qaphela
 figure         =       inani
+definitionlist =       uluhlu lwenkcazelo
 term           =       igama
 definition     =       inkcaza
 
@@ -176,7 +186,9 @@ quicknav_Table       = Iitafile
 quicknav_Checkbox    = Khangela iibhokisi
 
 # Shortened role names for braille
+menubarAbbr        =       ibha yemenyu
 scrollbarAbbr      =       umgca wokuhlisa usenyusa
+gripAbbr           =       igriphu
 alertAbbr          =       lumka
 menupopupAbbr      =       imenyu ezivelelayo
 documentAbbr       =       uxwebhu
@@ -190,7 +202,13 @@ columnheaderAbbr   =       isihloko sekholam
 rowheaderAbbr      =       isihloko serowu
 columnAbbr         =       ikholam
 rowAbbr            =       irowu
+cellAbbr           =       iseli
 linkAbbr           =       l-inki
+listAbbr           =       uluhlu
+listitemAbbr       =       dwelisa into
+outlineAbbr        =       isishwankathelo
+outlineitemAbbr    =       iayithem yesishwankathelo
+pagetabAbbr        =       ithebhu
 propertypageAbbr   =       iphepha lepropati
 graphicAbbr        =       igrafikhi
 pushbuttonAbbr     =       i-btn
@@ -212,8 +230,13 @@ paragraphAbbr      =       umhlathi
 entryAbbr          =       ufakelo
 captionAbbr        =       ikhepshini
 headingAbbr        =       Isihloko
+formAbbr           =       ifomu
+comboboxlistAbbr   =       uludwe lweebhokisi zekhombo
 comboboxoptionAbbr =       ukhetho kwibhokisi yekhombo
 imagemapAbbr       =       imgmaphu
+listboxoptionAbbr  =       ukhetho
+listboxAbbr        =       ibhokisi yoludwe
+flatequationAbbr   =       ulingano olusicaba
 gridcellAbbr       =       iseli yegridi
 noteAbbr           =       Qaphela
 figureAbbr         =       inani
