[S] devtools: Bug 1067141 - Scratchpad Open File uses fallbackCharsetList on UTF-8 NS_ERROR_ILLEGAL_INPUT

--- a/it/browser/chrome/browser/devtools/scratchpad.properties
+++ b/it/browser/chrome/browser/devtools/scratchpad.properties
@@ -7,6 +7,7 @@ browserWindow.unavailable = Non è stata rilevata alcuna finestra del browser in
 scratchpadContext.invalid = Non è possibile eseguire questa operazione nella modalità corrente.
 openFile.title = Apri file
 openFile.failed = Impossibile leggere il file.
+importFromFile.convert.failed = Conversione del file da %1$S a Unicode non riuscita.
 clearRecentMenuItems.label = Rimuovi elementi
 saveFileAs = Salva file con nome
 saveFile.failed = Salvataggio del file non riuscito
