--- a/uk/browser/chrome/browser/devtools/app-manager.properties
+++ b/uk/browser/chrome/browser/devtools/app-manager.properties
@@ -29,7 +29,7 @@ validator.invalidProjectType=Невідомий тип проекту «%S»
 # don't translate 'icons' and 'name'.
 validator.missNameManifestProperty=Бракує обов'язкового поля «name» в маніфесті.
 validator.missIconsManifestProperty=Бракує «icons» в маніфесті.
-validator.missIconMarketplace2=app submission to the Marketplace requires a 128px icon
+validator.missIconMarketplace2=Подання програми до магазину потребує піктограму, розміром 128 пікселів
 validator.invalidAppType=Невідомий тип програми: «%S».
 validator.invalidHostedPriviledges=Віддалена програма не може бути типом «%S».
 validator.noCertifiedSupport=«сертифіковані» програми не зовсім підтримуються в менеджері програм.
