--- a/uk/browser/chrome/browser/devtools/canvasdebugger.properties
+++ b/uk/browser/chrome/browser/devtools/canvasdebugger.properties
@@ -17,7 +17,7 @@ ToolboxCanvasDebugger.label=Canvas
 
 # LOCALIZATION NOTE (ToolboxCanvasDebugger.panelLabel):
 # This is used as the label for the toolbox panel.
-ToolboxCanvasDebugger.panelLabel=Canvas Panel
+ToolboxCanvasDebugger.panelLabel=Панель Canvas
 
 # LOCALIZATION NOTE (ToolboxCanvasDebugger.tooltip):
 # This string is displayed in the tooltip of the tab when the Shader Editor is
