--- a/uk/browser/chrome/browser/devtools/debugger.properties
+++ b/uk/browser/chrome/browser/devtools/debugger.properties
@@ -17,7 +17,7 @@ ToolboxDebugger.label=Зневаджувач
 
 # LOCALIZATION NOTE (ToolboxDebugger.panelLabel):
 # This is used as the label for the toolbox panel.
-ToolboxDebugger.panelLabel=Debugger Panel
+ToolboxDebugger.panelLabel=Панель зневаджувача
 
 # LOCALIZATION NOTE (DebuggerWindowTitle):
 # The title displayed for the debugger window.
