--- a/da/webapprt/webapprt/webapp.properties
+++ b/da/webapprt/webapprt/webapp.properties
@@ -41,5 +41,14 @@ webapps.install.description=Vil du installere %S?
 webapps.install.install=Installer app
 webapps.install.dontinstall=Installer ikke
 
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Afinstaller %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Vil du afinstallere %S?
+webapps.uninstall.uninstall=Afinstaller app
+webapps.uninstall.dontuninstall=Afinstaller ikke
+
 paymentDialog.title=Betaling
 paymentDialog.message=Hvilken betalingstjeneste vil du bruge?
