[qa] browser: improved translations

--- a/sr/browser/chrome/browser/migration/migration.properties
+++ b/sr/browser/chrome/browser/migration/migration.properties
@@ -27,8 +27,8 @@ importedSafariReadingList=Списак за читање (из Safari)
 2_firefox=Колачићи
 
 4_ie=Историјат прегледања
-4_safari=Историјат читања прегледања
-4_chrome=Историјат читања прегледања
+4_safari=Историјат прегледања
+4_chrome=Историјат прегледања
 4_firefox_history_and_bookmarks=Историјат прегледања и забелешке
 
 8_ie=Сачувани формулари
