--- a/sr/browser/chrome/browser/pageInfo.properties
+++ b/sr/browser/chrome/browser/pageInfo.properties
@@ -5,7 +5,7 @@
 pageInfo.page.title=Подаци о страници - %S
 pageInfo.frame.title=Подаци о оквиру - %S
 
-noPageTitle=Безимена стрница:
+noPageTitle=Безимена старница:
 pageTitle=%S:
 unknown=Непознат
 notset=Неодређено
@@ -52,6 +52,6 @@ securityNVisits=Да, оволико пута: %S
 #   e.g. indexedDBUsage : "50.23 MB"
 #   %1$S = size (in bytes or megabytes, ...)
 #   %2$S = unit of measure (bytes, KB, MB, ...)
-indexedDBUsage=Овај веб-сајт користи %1$S %2$S
+indexedDBUsage=Овај веб сајт користи %1$S %2$S
 
 permissions.useDefault=Користи подразумевано
