--- a/sr/browser/chrome/browser/places/bookmarkProperties.properties
+++ b/sr/browser/chrome/browser/places/bookmarkProperties.properties
@@ -9,11 +9,11 @@ dialogAcceptLabelAddMulti=Додај забелешке
 dialogAcceptLabelEdit=Сачувај
 dialogTitleAddBookmark=Нова забелешка
 dialogTitleAddLivemark=Претплати се са живом забелешком
-dialogTitleAddFolder=Нов директоријум
+dialogTitleAddFolder=Нови директоријум
 dialogTitleAddMulti=Нове забелешке
 dialogTitleEdit=Својства за „%S‟
 
 bookmarkAllTabsDefault=[Име директоријума]
-newFolderDefault=Нов директоријум
+newFolderDefault=Нови директоријум
 newBookmarkDefault=Нова забелешка
 newLivemarkDefault=Нова жива забелешка
