--- a/sr/browser/chrome/browser/places/places.properties
+++ b/sr/browser/chrome/browser/places/places.properties
@@ -89,6 +89,6 @@ bookmarkResultLabel=Забелешка
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
 lockPrompt.title=Грешка при покретању прегледача
-lockPrompt.text=Историјат и забелешке неће радити јер неку од датотека програма %S већ користи други програм.  Ово проблем може проузроковати софтвер за безбедност.
+lockPrompt.text=Историјат и забелешке неће радити јер неку од датотека програма %S већ користи други програм.  Овај проблем може проузроковати софтвер за безбедност.
 lockPromptInfoButton.label=Сазнајте више
 lockPromptInfoButton.accessKey=С
