--- a/sr/browser/chrome/browser/search.properties
+++ b/sr/browser/chrome/browser/search.properties
@@ -6,10 +6,10 @@ searchtip=Претражи употребом %S
 
 # LOCALIZATION NOTE (cmd_pasteAndSearch): "Search" is a verb, this is the
 # search bar equivalent to the url bar's "Paste & Go"
-cmd_pasteAndSearch=Убаци и претражи
+cmd_pasteAndSearch=Налепи и претражи
 
-cmd_clearHistory=Избриши историјат претраге
-cmd_clearHistory_accesskey=И
+cmd_clearHistory=Обриши историјат претраге
+cmd_clearHistory_accesskey=О
 
 cmd_showSuggestions=Прикажи предлоге
 cmd_showSuggestions_accesskey=ж
