--- a/sr/browser/installer/nsisstrings.properties
+++ b/sr/browser/installer/nsisstrings.properties
@@ -31,7 +31,7 @@ WARN_DISK_SPACE=Нема довољно простора на диску за и
 WARN_ROOT_INSTALL=Немогуће је инсталирати на корену(root) Вашег диска.\n\nКликните У реду да бисте одабрали другу локацију.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=Програм $BrandFullName је већ покренут.\n\nМолимо да искључите програм $BrandFullName пре него што покренете издање које сте управо инсталирали.
 
-ERROR_DOWNLOAD=Ваше преузимање је прекинуто.\n\nКликните ОК да бисте наставили.
+ERROR_DOWNLOAD=Ваше преузимање је прекинуто.\n\nКликните У реду да бисте наставили.
 
 INSTALL_BUTTON=&Инсталирај
 UPGRADE_BUTTON=&Надогради
@@ -59,7 +59,7 @@ UPGRADING_LABEL=Надограђивање $BrandShortName…
 
 SELECT_FOLDER_TEXT=Изаберите директоријум у који ћете инсталирати програм $BrandFullName.
 
-BYTE=Б
+BYTE=B
 KILO=К
 MEGA=М
 GIGA=G
