--- a/sr/browser/chrome/browser/newTab.properties
+++ b/sr/browser/chrome/browser/newTab.properties
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-newtab.pin=Закачи овај сајт на овом положају
+newtab.pin=Закачи овај сајт на тренутну позицију
 newtab.unpin=Откачи овај сајт
 newtab.block=Уклони овај сајт
 # LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
