--- a/sr/browser/chrome/browser/syncQuota.properties
+++ b/sr/browser/chrome/browser/syncQuota.properties
@@ -27,7 +27,7 @@ quota.retrieving.label      = Преузимање…
 # the download manager.
 quota.sizeValueUnit.label   = %1$S %2$S.
 quota.remove.label          = Уклони
-quota.treeCaption.label     = Дештиклирајте ставке да бисте их престали усклађивати и да бисте ослободили простор на серверу.
+quota.treeCaption.label     = Дештиклирајте ставке да бисте их престали синхронизовати и да бисте ослободили простор на серверу.
 # LOCALIZATION NOTE (quota.removal.label): %S is a list of engines that will be
 # disabled and whose data will be removed once the user confirms.
 quota.removal.label         = Firefox Sync ће уклонити следеће податке: %S.
@@ -39,4 +39,4 @@ quota.list.separator        = ,
 # up by disabling the unchecked engines.  If displayed this string is
 # concatenated directly to quota.removal.label and may need to start off with
 # whitespace.
-quota.freeup.label          =  Ово је ослободити %1$S %2$S.
+quota.freeup.label          =  Ово ће ослободити %1$S %2$S.
