--- a/uk/security/manager/chrome/pipnss/nsserrors.properties
+++ b/uk/security/manager/chrome/pipnss/nsserrors.properties
@@ -4,18 +4,18 @@
 
 SSL_ERROR_EXPORT_ONLY_SERVER=Неможливо спілкуватись конфіденційно. Вузол не підтримує високорівневе шифрування.
 SSL_ERROR_US_ONLY_SERVER=Неможливо спілкуватись конфіденційно. Вузол вимагає високорівневе шифрування, котре не підтримується.
-SSL_ERROR_NO_CYPHER_OVERLAP=З вузлом неможливо спілкуватись конфіденційно: нема спільних криптоалгоритмів.
+SSL_ERROR_NO_CYPHER_OVERLAP=З вузлом неможливо спілкуватись конфіденційно: немає спільних криптоалгоритмів.
 SSL_ERROR_NO_CERTIFICATE=Не вдалось знайти сертифікат чи ключ необхідний для засвідчення.
 SSL_ERROR_BAD_CERTIFICATE=З вузлом неможливо спілкуватись конфіденційно: сертифікат вузла відхилено.
-SSL_ERROR_UNUSED_5=Unrecognized SSL error code.
+SSL_ERROR_UNUSED_5=Невизначений код помилки SSL.
 SSL_ERROR_BAD_CLIENT=Сервер отримав від клієнта хибні дані.
 SSL_ERROR_BAD_SERVER=Клієнт отримав від сервера хибні дані.
 SSL_ERROR_UNSUPPORTED_CERTIFICATE_TYPE=Тип сертифікату не підтримується.
 SSL_ERROR_UNSUPPORTED_VERSION=Вузол використовує непідтримувану версію протоколу секретності.
-SSL_ERROR_UNUSED_10=Unrecognized SSL error code.
+SSL_ERROR_UNUSED_10=Невизначений код помилки SSL.
 SSL_ERROR_WRONG_CERTIFICATE=Засвідчення клієнта не вдалось: приватний ключ у базі ключів не відповідає публічному ключу у базі сертифікатів.
 SSL_ERROR_BAD_CERT_DOMAIN=З вузлом неможливо спілкуватись конфіденційно: ім’я домену не відповідає сертифікату сервера.
-SSL_ERROR_POST_WARNING=Unrecognized SSL error code.
+SSL_ERROR_POST_WARNING=Невизначений код помилки SSL.
 SSL_ERROR_SSL2_DISABLED=Вузол підтримує лише SSL версії 2, котра у вас вимкнена.
 SSL_ERROR_BAD_MAC_READ=SSL отримав запис з невірним Кодом засвідчення повідомлення.
 SSL_ERROR_BAD_MAC_ALERT=Вузол SSL повідомляє невірний Код засвідчення повідомлення.
@@ -113,15 +113,15 @@ SSL_ERROR_BAD_CERT_STATUS_RESPONSE_ALERT=Вузол SSL не зміг отрим
 SSL_ERROR_BAD_CERT_HASH_VALUE_ALERT=Вузол SSL повідомив погане хеш значення сертифікату.
 SSL_ERROR_RX_UNEXPECTED_NEW_SESSION_TICKET=SSL received an unexpected New Session Ticket handshake message.                             
 SSL_ERROR_RX_MALFORMED_NEW_SESSION_TICKET=SSL received a malformed New Session Ticket handshake message.                                
-SSL_ERROR_DECOMPRESSION_FAILURE=SSL received a compressed record that could not be decompressed.                                        
+SSL_ERROR_DECOMPRESSION_FAILURE=SSL отримав стиснутий запис, який неможливо розпакувати.                                        
 SSL_ERROR_RENEGOTIATION_NOT_ALLOWED=Renegotiation is not allowed on this SSL socket.                                                    
 SSL_ERROR_UNSAFE_NEGOTIATION=Peer attempted old style (potentially vulnerable) handshake.
-SSL_ERROR_RX_UNEXPECTED_UNCOMPRESSED_RECORD=SSL received an unexpected uncompressed record.
+SSL_ERROR_RX_UNEXPECTED_UNCOMPRESSED_RECORD=SSL отримав неочікуваний нестиснутий запис.
 SSL_ERROR_WEAK_SERVER_EPHEMERAL_DH_KEY=SSL received a weak ephemeral Diffie-Hellman key in Server Key Exchange handshake message.
-SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL received invalid NPN extension data.
-SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=SSL feature not supported for SSL 2.0 connections.
-SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=SSL feature not supported for servers.
-SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL feature not supported for clients.
+SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL отримав недійсне розширення даних NPN.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Функція SSL не підтримується для з'єднань SSL 2.0.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Функція SSL не підтримується для серверів.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Функція SSL не підтримується для клієнтів.
 SEC_ERROR_IO=Під час авторизації безпеки виникла помилка вводу/виводу.
 SEC_ERROR_LIBRARY_FAILURE=невдача з бібліотекою безпеки.
 SEC_ERROR_BAD_DATA=бібліотека безпеки: отримано неправильні дані.
@@ -284,9 +284,9 @@ SEC_ERROR_OUT_OF_SEARCH_LIMITS=Cert validation search is out of search limits
 SEC_ERROR_INVALID_POLICY_MAPPING=Policy mapping contains anypolicy
 SEC_ERROR_POLICY_VALIDATION_FAILED=Cert chain fails policy validation
 SEC_ERROR_UNKNOWN_AIA_LOCATION_TYPE=Unknown location type in cert AIA extension
-SEC_ERROR_BAD_HTTP_RESPONSE=Server returned bad HTTP response
-SEC_ERROR_BAD_LDAP_RESPONSE=Server returned bad LDAP response
-SEC_ERROR_FAILED_TO_ENCODE_DATA=Failed to encode data with ASN1 encoder
+SEC_ERROR_BAD_HTTP_RESPONSE=Сервер повернув хибну HTTP відповідь
+SEC_ERROR_BAD_LDAP_RESPONSE=Сервер повернув хибну LDAP відповідь
+SEC_ERROR_FAILED_TO_ENCODE_DATA=Не вдалося кодувати дані з ASN1 кодером
 SEC_ERROR_BAD_INFO_ACCESS_LOCATION=Bad information access location in cert extension
 SEC_ERROR_LIBPKIX_INTERNAL=Libpkix internal error occured during cert validation.
 SEC_ERROR_PKCS11_GENERAL_ERROR=A PKCS #11 module returned CKR_GENERAL_ERROR, indicating that an unrecoverable error has occurred.
@@ -294,11 +294,11 @@ SEC_ERROR_PKCS11_FUNCTION_FAILED=A PKCS #11 module returned CKR_FUNCTION_FAILED,
 SEC_ERROR_PKCS11_DEVICE_ERROR=A PKCS #11 module returned CKR_DEVICE_ERROR, indicating that a problem has occurred with the token or slot.
 SEC_ERROR_BAD_INFO_ACCESS_METHOD=Unknown information access method in certificate extension.
 SEC_ERROR_CRL_IMPORT_FAILED=Error attempting to import a CRL.
-SEC_ERROR_EXPIRED_PASSWORD=The password expired.
-SEC_ERROR_LOCKED_PASSWORD=The password is locked.
-SEC_ERROR_UNKNOWN_PKCS11_ERROR=Unknown PKCS #11 error.
+SEC_ERROR_EXPIRED_PASSWORD=Пароль прострочений.
+SEC_ERROR_LOCKED_PASSWORD=Пароль заблокований.
+SEC_ERROR_UNKNOWN_PKCS11_ERROR=Невідома помилка PKCS #11.
 SEC_ERROR_BAD_CRL_DP_URL=Invalid or unsupported URL in CRL distribution point name.
-SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=The certificate was signed using an signature algorithm that is disabled because it is not secure.
+SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Сертифікат підписано з використанням алгоритму, який вимкнено через його незахищеність.
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=The server uses key pinning (HPKP) but no trusted certificate chain could be constructed that matches the pinset. Key pinning violations cannot be overridden.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=The server uses a certificate with a basic constraints extension identifying it as a certificate authority. For a properly-issued certificate, this should not be the case.
-MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=The server presented a certificate with a key size that is too small to establish a secure connection.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Сервер надав сертифікат з розміром ключа, який є замалим для встановлення захищеного з'єднання.
