--- a/sk/browser/chrome/browser/places/places.properties
+++ b/sk/browser/chrome/browser/places/places.properties
@@ -76,7 +76,7 @@ OrganizerQueryAllBookmarks=Všetky záložky
 OrganizerQueryTags=Značky
 
 # LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
-# keywordResultLabel)
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
 # See createResultLabel() in urlbarBindings.xml
@@ -84,6 +84,7 @@ tagResultLabel=Značka
 bookmarkResultLabel=Záložka
 switchtabResultLabel=Karta
 keywordResultLabel=Kľúčové slovo
+searchengineResultLabel=Vyhľadávanie
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
