--- a/sk/browser/chrome/browser/browser.properties
+++ b/sk/browser/chrome/browser/browser.properties
@@ -555,14 +555,18 @@ getUserMedia.stopSharing.accesskey = U
 
 getUserMedia.sharingMenu.label = Karty zdieľajúce zariadenia
 getUserMedia.sharingMenu.accesskey = d
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
-#                    getUserMedia.sharingMenuWindow, getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -576,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamera a mikrofón)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofón a aplikácia)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofón a obrazovka)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofón a okno)
+getUserMedia.sharingMenuCameraApplication = %S (kamera a aplikácia)
+getUserMedia.sharingMenuCameraScreen = %S (kamera a obrazovka)
+getUserMedia.sharingMenuCameraWindow = %S (kamera a okno)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofón a aplikácia)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofón a obrazovka)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofón a okno)
