--- a/sk/browser/chrome/browser/devtools/scratchpad.properties
+++ b/sk/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,6 +32,10 @@ openFile.title=Otvoriť súbor
 # open fails.
 openFile.failed=Nepodarilo sa načítať súbor.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+importFromFile.convert.failed=Nepodarilo sa skonvertovať súbor z %1$S do Unicode.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=Vymazať položky
