--- a/da/browser/chrome/browser/preferences/preferences.properties
+++ b/da/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Følgende cookies er gemt på din computer:
 cookiesFiltered=Følgende cookies matcher din søgning:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Fjern offline data for websted
 offlineAppRemovePrompt=Hvis du fjerner disse data, vil %S ikke længere være tilgængelig offline. Er du sikker på, at du vil fjerne offline data for dette websted?
 offlineAppRemoveConfirm=Fjern offline data
