--- a/da/browser/chrome/browser/shellservice.properties
+++ b/da/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=%S &indstillinger
 safeModeLabel=%S &Fejlsikret tilstand
-setDefaultBrowserTitle=Standardbrowser
-setDefaultBrowserMessage=%S er i øjeblikket ikke sat som din standardbrowser. Ønsker du at gøre den til din standardbrowser?
-setDefaultBrowserDontAsk=Kontroller altid ved opstart af %S.
-alreadyDefaultBrowser=%S er allerede sat som din standardbrowser.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Få mest muligt ud af %S ved at sætte den som din standardbrowser.
+setDefaultBrowserConfirm.label     = Brug %S som min standardbrowser
+setDefaultBrowserConfirm.accesskey = B
+setDefaultBrowserOptions.label     = Indstillinger
+setDefaultBrowserOptions.accesskey = I
+setDefaultBrowserNotNow.label      = Ikke nu
+setDefaultBrowserNotNow.accesskey  = k
+setDefaultBrowserNever.label       = Spørg mig ikke igen
+setDefaultBrowserNever.accesskey   = S
+
+
 desktopBackgroundLeafNameWin=Skrivebordsbaggrund.bmp
 DesktopBackgroundDownloading=Gemmer billede…
 DesktopBackgroundSet=Sæt som baggrund
