--- a/da/browser/chrome/browser/loop/loop.properties
+++ b/da/browser/chrome/browser/loop/loop.properties
@@ -56,7 +56,7 @@ share_email_subject3=Du er blevet inviteret til en samtale
 ## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_email_body3=For at acceptere denne invitation, kopier eller klik på dette link for at starte din samtale:\r\n\r\n{{callUrl}}
-share_button=Mail
+share_button=Send med mail
 copy_url_button=Kopier
 copied_url_button=Kopieret!
 
@@ -243,7 +243,7 @@ connection_error_see_console_notification=Opkaldet mislykkedes. Se detaljer i ko
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name, or fall back to client_shortname_fallback
-legal_text_and_links3==Ved at bruge {{clientShortname}} accepterer du {{terms_of_use}} \
+legal_text_and_links3=Ved at bruge {{clientShortname}} accepterer du {{terms_of_use}} \
   og {{privacy_notice}}.
 legal_text_tos = betingelserne for brug
 legal_text_privacy = privatlivspolitikken
