--- a/da/browser/chrome/browser/quitDialog.properties
+++ b/da/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=&Husk og afslut
 neverAsk2=&Spørg ikke næste gang
 message=Ønsker du at %S skal huske dine faneblade og vinduer til næste gang den startes?
 messageNoWindows=Ønsker du at %S skal huske dine faneblade til næste gang den startes?
+messagePrivate=Du er i private browsing-tilstand. Hvis du afslutter %S nu, vil alle dine åbne faneblade og vinduer blive kasseret.
