--- a/it/browser/chrome/browser/places/places.properties
+++ b/it/browser/chrome/browser/places/places.properties
@@ -57,6 +57,7 @@ tagResultLabel = Etichetta
 bookmarkResultLabel = Segnalibro
 switchtabResultLabel = Scheda
 keywordResultLabel = Parola chiave
+searchengineResultLabel = Ricerca
 lockPrompt.title = Errore avvio browser
 lockPrompt.text = I segnalibri e la cronologia non potranno funzionare correttamente in quanto un file di %S risulta utilizzato da un’altra applicazione. Il problema potrebbe essere causato da un software di sicurezza.
 lockPromptInfoButton.label = Ulteriori informazioni
