[S] browser: Bug 1069300 - strings for panic/privacy/forget-button for beta

--- a/it/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/it/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -49,3 +49,5 @@ email-link-button.label = Invia link
 email-link-button.tooltiptext3 = Invia link a questa pagina per email
 quit-button.tooltiptext.linux2 = Esci da %1$S (%2$S)
 quit-button.tooltiptext.mac = Esci da %1$S (%2$S)
+panic-button.label = Dimentica
+panic-button.tooltiptext = Elimina alcune informazioni dalla cronologia di navigazione
