--- a/ga-IE/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ga-IE/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,5 +97,8 @@ quit-button.tooltiptext.linux2 = Scoir ó %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Scoir ó %1$S (%2$S)
 
-loop-call-button.label = Invite someone to talk
-loop-call-button.tooltiptext = Invite someone to talk
+panic-button.label = Déan Dearmad
+panic-button.tooltiptext = Déan dearmad ar chuid den stair bhrabhsála
+
+loop-call-button.label = Tabhair cuireadh chun cainte do dhuine éigin
+loop-call-button.tooltiptext = Tabhair cuireadh chun cainte do dhuine éigin
