--- a/zh-TW/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/zh-TW/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,6 +97,9 @@ quit-button.tooltiptext.linux2 = 離開 %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = 離開 %1$S (%2$S)
 
+panic-button.label = 忘記
+panic-button.tooltiptext = 忘掉一些瀏覽紀錄
+
 loop-call-button.label = 邀請某人加入通話
 loop-call-button.tooltiptext = 邀請某人加入通話
 
