--- a/nl/browser/chrome/browser/devtools/gclicommands.properties
+++ b/nl/browser/chrome/browser/devtools/gclicommands.properties
@@ -351,7 +351,7 @@ tiltRotateDesc=De webpagina-mesh draaien
 
 # LOCALIZATION NOTE (tiltRotateManual) A fuller description of the 'tilt rotate'
 # command, displayed when the user asks for help on what it does.
-tiltRotateManual=De webpagina-mesh stap voor stap in een bepaald richting draaien
+tiltRotateManual=De webpagina-mesh stap voor stap in een bepaalde richting draaien
 
 # LOCALIZATION NOTE (tiltRotateXDesc) A very short string to describe the
 # 'x' parameter to the 'tilt rotate' command, which is displayed in a dialog
@@ -407,7 +407,7 @@ tiltZoomAmountManual=Het aantal pixels verplaatsing van de webpagina-mesh langs 
 # command. See tiltResetManual for a fuller description of what it does. This
 # string is designed to be shown in a menu alongside the command name, which
 # is why it should be as short as possible.
-tiltResetDesc=De verplaatsing, rotatie en zoom ongedaan maken
+tiltResetDesc=De verplaatsing, draaiing en zoom ongedaan maken
 
 # LOCALIZATION NOTE (tiltResetManual) A fuller description of the 'tilt reset'
 # command, displayed when the user asks for help on what it does.
