--- a/nl/browser/chrome/browser/devtools/profiler.properties
+++ b/nl/browser/chrome/browser/devtools/profiler.properties
@@ -17,7 +17,7 @@ profiler.label2=Prestaties
 
 # LOCALIZATION NOTE (profiler.panelLabel):
 # This is used as the label for the toolbox panel.
-profiler.panelLabel2=Paneel Prestaties
+profiler.panelLabel2=Prestatiespaneel
 
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
