--- a/nl/browser/chrome/browser/devtools/storage.properties
+++ b/nl/browser/chrome/browser/devtools/storage.properties
@@ -29,7 +29,7 @@ storage.menuLabel=Opslag-inspector
 # LOCALIZATION NOTE (storage.panelLabel):
 # This string is used as the aria-label for the iframe of the Storage Inspector
 # tool in developer tools toolbox.
-storage.panelLabel=Paneel Opslag
+storage.panelLabel=Opslagpaneel
 
 # LOCALIZATION NOTE (storage.tooltip):
 # This string is displayed in the tooltip of the tab when the storage editor is
