toolkit translation update

--- a/fi/security/manager/chrome/pipnss/nsserrors.properties
+++ b/fi/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=Salasana on lukittu.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Tuntematon PKCS #11 -virhe.
 SEC_ERROR_BAD_CRL_DP_URL=Virheellinen tai ei tuettu osoite CRL-jakelupisteen nimessä.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Varmenne oli allekirjoitettu allekirjoitusalgoritmilla, joka on otettu pois käytöstä, koska se ei ole varma.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Palvelin käyttää avaimen lukkolistaa (HPKP), mutta yhtäkään luotettua ja lukkolistan mukaista varmenneketjua ei voitu luoda. Lukkolistarikkeitä ei voida ohittaa.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Palvelin käyttää tavallista rajoitelaajennusvarmennetta, joka tunnistaa sen varmentajaksi. Asianmukaisella varmenteella näin ei pitäisi olla.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Palvelimen tarjoaman varmenteen avaimen koko on liian pieni suojatun yhteyden luomiseksi.
