--- a/fi/toolkit/chrome/global/aboutSupport.properties
+++ b/fi/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = ClearType-asetuksia ei löytynyt
 adapterDescription = Laitteen kuvaus
 adapterVendorID = Myyjän tunnus
 adapterDeviceID = Laitteen tunnus
+adapterSubsysID = Alajärjestelmän tunnus
 adapterDrivers = Laitteen ajurit
 adapterRAM = Laitteen muisti
 driverVersion = Ajureiden versio
@@ -71,6 +72,7 @@ driverDate = Ajureiden päiväys
 adapterDescription2 = Laitteen kuvaus (GPU #2) 
 adapterVendorID2 = Myyjän tunnus (GPU #2) 
 adapterDeviceID2 = Laitteen tunnus (GPU #2)
+adapterSubsysID2 = Alajärjestelmän tunnus (GPU #2)
 adapterDrivers2 = Laitteen ajurit (GPU #2)
 adapterRAM2 = Laitteen muisti (GPU #2)
 driverVersion2 = Ajureiden versio (GPU #2)
