--- a/fi/webapprt/webapprt/webapp.properties
+++ b/fi/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=Asenna sovellus %S
 webapps.install.description=Asennetaanko sovellus %S?
 webapps.install.install=Asenna sovellus
 webapps.install.dontinstall=Älä asenna
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Poista sovellus %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Poistetaanko sovellus %S?
+webapps.uninstall.uninstall=Poista sovellus
+webapps.uninstall.dontuninstall=Älä poista
 
 paymentDialog.title=Maksu
 paymentDialog.message=Mitä maksutapaa haluat käyttää?
