--- a/fi/dom/chrome/accessibility/AccessFu.properties
+++ b/fi/dom/chrome/accessibility/AccessFu.properties
@@ -94,11 +94,10 @@ listEnd        =       Viimeinen kohta
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 kohta;#1 kohtaa
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S / %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S / %2$S
 
 # Landmark announcements
 banner         =       banneri
@@ -108,17 +107,14 @@ main           =       päävalikko
 navigation     =       navigointi
 search         =       haku
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S, jossa %S ja %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 sarake;#1 saraketta
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = 1 sarake;#1 saraketta
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 rivi;#1 riviä
+tblRowInfo = ja 1 rivi;ja #1 riviä
 
 # table or grid cell information
 columnInfo = Sarake %S
@@ -190,18 +186,85 @@ quicknav_Table       = Taulukot
 quicknav_Checkbox    = Valintaruudut
 
 # Shortened role names for braille
-linkAbbr           =       lnk
-pushbuttonAbbr     =       pnk
-passwordtextAbbr   =       salasntkst
-imagemapAbbr       =       kuvkrt
-figureAbbr         =       kuv
-textareaAbbr       =       tkstalue
+menubarAbbr        =       valikko
+scrollbarAbbr      =       vierityspalkki
+gripAbbr           =       ote
+alertAbbr          =       huomio
+menupopupAbbr      =       valikkoikkuna
+documentAbbr       =       dokumentti
+paneAbbr           =       sivu
+dialogAbbr         =       ikkuna
+separatorAbbr      =       erotin
+toolbarAbbr        =       työkalupalkki
+statusbarAbbr      =       tilapalkki
 tableAbbr          =       tlkko
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+columnheaderAbbr   =       sarakeotsikko
+rowheaderAbbr      =       riviotsikko
+columnAbbr         =       sarake
+rowAbbr            =       rivi
+cellAbbr           =       solu
+linkAbbr           =       lnk
+listAbbr           =       lista
+listitemAbbr       =       listamerkintä
+outlineAbbr        =       otsikkolista
+outlineitemAbbr    =       otsikko
+pagetabAbbr        =       välilehti
+propertypageAbbr   =       ominaisuussivu
+graphicAbbr        =       grafiikka
+pushbuttonAbbr     =       painike
+checkbuttonAbbr    =       monivalintanappi
+radiobuttonAbbr    =       valintanappi
+comboboxAbbr       =       valintalaatikko
+progressbarAbbr    =       edistymispalkki
+sliderAbbr         =       vedin
+spinbuttonAbbr     =       kiertopainike
+diagramAbbr        =       diagrammi
+animationAbbr      =       animaatio
+equationAbbr       =       yhtälö
+buttonmenuAbbr     =       painikevalikko
+whitespaceAbbr     =       tyhjä tila
+pagetablistAbbr    =       välilehtilista
+canvasAbbr         =       piirtoalue
+checkmenuitemAbbr  =       monivalintavalikon kohta
+labelAbbr          =       nimi
+passwordtextAbbr   =       salasntksti
+radiomenuitemAbbr  =       valintavalikon kohta
+textcontainerAbbr  =       tekstilaatikko
+togglebuttonAbbr   =       joko-tai -painike
+treetableAbbr      =       puutaulukko
+headerAbbr         =       ylätunniste
+footerAbbr         =       alatunniste
+paragraphAbbr      =       kappale
+entryAbbr          =       merkintä
+captionAbbr        =       kuvateksti
+headingAbbr        =       otsikko
+sectionAbbr        =       alaotsikko
+formAbbr           =       lomake
+comboboxlistAbbr   =       valintalaatikkolista
+comboboxoptionAbbr =       valintalaatikon vaihtoehto
+imagemapAbbr       =       kuvakrt
+listboxoptionAbbr  =       vaihtoehto
+listboxAbbr        =       listalaatikko
+flatequationAbbr   =       tasoyhtälö
+gridcellAbbr       =       ruudukkosolu
+noteAbbr           =       merkintä
+figureAbbr         =       kuva
+definitionlistAbbr =       määrittelylista
+termAbbr           =       termi
+definitionAbbr     =       määrittely
+textareaAbbr       =       tkstalue
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1s;#1s
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
-cellInfoAbbr = c%Sr%S
+tblRowInfoAbbr = #1r;#1r
+cellInfoAbbr = s%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
