--- a/fi/dom/chrome/security/csp.properties
+++ b/fi/dom/chrome/security/csp.properties
@@ -65,6 +65,9 @@ scriptFromStringBlocked = Yritys kutsua JavaScriptiä merkkijonosta (kutsumalla 
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Tulkitaan %1$S palvelimen nimeksi, ei hakusanaksi. Jos halusit kirjoittaa hakusanan, kirjoita '%2$S' (heittomerkeillä ympyröitynä).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Ei tueta direktiiviä '%1$S'. Direktiivi ja arvo ohitetaan.
 
 # CSP Errors:
 policyURINotAlone = policy-uri direktiivi voidaan antaa vain yksinään
