[desktop]Bug 1069300 - strings for panic/privacy/forget-button for beta

--- a/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -96,3 +96,6 @@ quit-button.tooltiptext.linux2 = Quitter %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Quitter %1$S (%2$S)
+
+panic-button.label = Effacer des données
+panic-button.tooltiptext = Effacer des données de l'historique de navigation
